Добавление иконки загрузки перед отображение страницы документа. Изменение ключей для captcha.

--- a/templates/reader/djvu.reader_new.html.twig
+++ b/templates/reader/djvu.reader_new.html.twig
@@ -4,6 +4,7 @@
 
  {% block body %}
      <h2 class="title">Чтение книги "{{ book.title }}"</h2>
+     <div class="loading"></div>
      <div class="reader container mb-5">
          <div class="pdf_header">
              <ul class="navigation">
