--- a/templates/reader/pdf_reader_new.html.twig
+++ b/templates/reader/pdf_reader_new.html.twig
@@ -6,6 +6,7 @@
      <main class="main">
          <article class="products">
              <h2 class="title">Чтение книги "{{ book.title }}"</h2>
+             <div class="loading"></div>
              <div class="reader container mb-5">
                  <div class="pdf_header">
                      <ul class="navigation">
