--- a/public/css/reader.css
+++ b/public/css/reader.css
@@ -110,6 +110,20 @@ input[type="number"]::-webkit-outer-spin-button {
     align-items: center;
     gap: 1.5rem;
     justify-content: center;
+    display: none;
+}
+
+.loading {
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    /*background-image: url("https://i.stack.imgur.com/MnyxU.gif");*/
+    background-image: url('../img/loading.gif');
+    background-repeat: no-repeat;
+    background-position: top;
 }
 
 @media (min-width: 1440px) {
