--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -49,7 +49,7 @@
             </div>
 
             <div class="form-group row">
-                <div class="g-recaptcha" data-sitekey="6LfiU8klAAAAAAF1JKHwaMkToct_e0yS0LiBg1KK"></div>
+                <div class="g-recaptcha" data-sitekey=""></div>
             </div>
 
             <input type="submit" name="submit" value="Зарегистрироваться" class="btn-custom register-btn">
