--- a/templates/auth/sign.html.twig
+++ b/templates/auth/sign.html.twig
@@ -24,7 +24,7 @@
              </div>
 
              <div class="form-group row">
-                 <div class="g-recaptcha" data-sitekey="6LfiU8klAAAAAAF1JKHwaMkToct_e0yS0LiBg1KK"></div>
+                 <div class="g-recaptcha" data-sitekey=""></div>
              </div>
 
              <button type="submit" name="submit" class="btn-custom login-btn">Войти</button>
